# tank

./: .gitignore  CMakeLists.txt  Makefile  readme
dia2code/src/: generate_code_cpp.c  includes.c
doc/html/: _orientation_8h_source.html  _projectile_8h_source.html  _space_8cpp.html  _space_8h_source.html  _static_element_8h_source.html  _tank_8h_source.html  _tank_type_id_8h_source.html  annotated.html  class_destructible-members.html  class_destructible.html  class_projectile-members.html  class_projectile.html  classes.html  classstate_1_1_element-members.html  classstate_1_1_element.html  classstate_1_1_element_event-members.html  classstate_1_1_element_event.html  classstate_1_1_element_grid-members.html  classstate_1_1_element_grid.html  classstate_1_1_element_list-members.html  classstate_1_1_element_list.html  classstate_1_1_element_named_list-members.html  classstate_1_1_element_named_list.html  classstate_1_1_global_state-members.html  classstate_1_1_global_state.html  classstate_1_1_list_element-members.html  classstate_1_1_list_element.html  classstate_1_1_observable-members.html  classstate_1_1_observable.html  classstate_1_1_obstacle-members.html  classstate_1_1_obstacle.html  classstate_1_1_projectile_event-members.html  classstate_1_1_projectile_event.html  classstate_1_1_space-members.html  classstate_1_1_space.html  classstate_1_1_state_event-members.html  classstate_1_1_state_event.html  classstate_1_1_state_observer-members.html  classstate_1_1_state_observer.html  classstate_1_1_static_element-members.html  (+55 more)
doc/latex/: _space_8cpp.tex  annotated.tex  class_destructible.eps  class_destructible.tex  class_projectile.eps  class_projectile.tex  classstate_1_1_element.eps  classstate_1_1_element.tex  (+34 more)
docker/: plt-initial  run_docker_x11.sh
rapport/: Rapport.odt  apiWEB.odt  rapport.odt
res/: configmap
src/: AI.dia  ai.dia  ai.h  cache.h  client.dia  client.h  dev_platform.h  engine.dia  engine.h  main.cpp  mainwindow.cpp  piloteSFML.cpp  piloteSFML.hpp  render.dia  render.h  server.dia  server.h  state.dia  state.dia.autosave  state.h  state.hpp  trace.h
(+279 files in other folders)
